# projeto_dakee

./: .prettierrc  README.md  docker-compose.yml  dockerfile  package-lock.json  package.json  pyproject.toml
backend/: Dockerfile  config.py  main.py
backend/clients/: database.py
backend/controllers/: logic.py  sign_in.py
backend/models/: api.py  database.py
backend/routers/: root.py
database/: main.py
database/clients/: database.py
database/controllers/: sign_in.py
database/models/: api.py  database.py
database/routers/: root.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.tsx
src/: App.css  App.tsx  webpack.config.js
src/components/: types.ts
src/components/add_place/: add_place.css  add_place.tsx
src/components/filter_overlay/: filter_overlay.tsx
src/components/google_login/: google_login.css  google_login.tsx
src/components/menu/: menu.tsx
src/components/nav/: nav.css  nav.tsx
src/components/range_slider/: range_slider.css  range_slider.tsx
src/components/search_bar/: search_bar.css  search_bar.tsx
src/components/swiper/: Swiper.css  Swiper.tsx  SwiperItem.css  SwiperItem.tsx  Swiper_q.tsx
src/lib/: dom.ts  hooks.ts
src/pages/home/: home.css  home.tsx
src/pages/login/: login.css  login.tsx
src/pages/login_or_signUp/: login_or_signUp.css  login_or_signUp.tsx
src/pages/logo/: logo.css  logo.tsx
src/pages/my_profile/: my_profile.css  my_profile.tsx
src/pages/no_internet/: no_internet.css  no_internet.tsx
src/pages/questionaire/: questionaire.css  questionaire.tsx
(+32 files in other folders)
